--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     min-height: 100vh;
     align-items: center;
     justify-content: center;
-    background: url('bg.jpg');
+    background: url("./bg.jpg");
 }
   
 .wrapper {
